<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_contact_message">Contact</string>
    <string name="donuts">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="enter_address_hint">Enter</string>
    <string name="enter_phone_hint">Phone</string>
    <string name="enter_note_hint">Note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="textview">TextView</string>
    <string name="pick_up">Pick up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="action_order_message">Order</string>
    <string name="action_status_message">Status</string>
    <string name="date">Date</string>
    <string name="action_favorite_message">Favorite</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
